--- a/calendar.html
+++ b/calendar.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .today {
+            background-color: #d61919;
+            padding: 5px;
+        }
+    </style>
 </head>
+
 <body>
     <h1>Календар</h1>
     <script src="calendar.js"></script>
 </body>
+
 </html>
